# ipfs-embed

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  warm-derive
.github/workflows/: ci.yml
benches/: list.rs
bin_old/: Cargo.toml
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
core/: Cargo.toml
core/src/: lib.rs
db/: .gitignore  Cargo.toml
db/benches/: alias.rs
db/examples/: alias.rs
db/src/: blocks.rs  id.rs  lib.rs  metadata.rs  tx.rs
db_old/: Cargo.toml
db_old/src/: wal.rs
examples/: bitswap_sync_bench.rs  block_builder.rs  chain.rs  compat.rs  encrypted_block_builder.rs  ipld_list.rs  restart.rs  sync.rs
examples_old/: block_builder.rs
harness/: Cargo.toml
harness/src/: lib.rs
harness/tests/: netsim.rs
net/: Cargo.toml
net/src/: behaviour.rs  config.rs  lib.rs  peers.rs  query.rs
post/: Cargo.toml
post/src/: lib.rs
prom/: prometheus.yml
sqlite/: Cargo.toml
sqlite/src/: lib.rs
src/: config.rs  db.rs  error.rs  executor.rs  gc.rs  lib.rs  store.rs  telemetry.rs  test_util.rs  variable.rs
src/net/: address_handler.rs  behaviour.rs  config.rs  mod.rs  p2p_wrapper.rs  peer_info.rs  peers.rs  tests.rs
src/network/: behaviour.rs  config.rs  kad.rs  mdns.rs  mod.rs  ping.rs
src/storage/: gc.rs  key.rs  mod.rs  network.rs
substrate/: Cargo.toml
substrate/src/: lib.rs
tests/: gc.rs  list.rs  memstore.rs
