[workspace]
members = [".", "cli", "harness"]

[package]
name = "ipfs-embed"
version = "0.22.4"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "small embeddable ipfs implementation"
repository = "https://github.com/ipfs-rust/ipfs-embed"

[features]
default = ["async_global"]
async_global = ["async-global-executor", "libp2p/tcp-async-io", "libp2p/dns-async-std"]
tokio = ["tokio-crate", "libp2p/tcp-tokio", "libp2p/dns-tokio"]
telemetry = ["tide", "async_global"]

[dependencies]
anyhow = "1.0.41"
async-global-executor = { version = "2.0.2", optional = true }
async-io = "1.6.0"
async-trait = "0.1.50"
fnv = "1.0.7"
futures = "0.3.15"
ipfs-sqlite-block-store = "0.7.0"
lazy_static = "1.4.0"
libipld = { version = "0.12.0", default-features = false }
libp2p-bitswap = "0.19.0"
libp2p-blake-streams = "0.1.0"
libp2p-broadcast = "0.5.0"
libp2p-quic = { version = "0.6.1", features = ["noise"] }
names = "0.11.0"
parking_lot = "0.11.1"
pin-project = "1.0.7"
prometheus = "0.12.0"
thiserror = "1.0.26"
tide = { version = "0.16.0", optional = true }
tokio-crate = { package = "tokio", version = "1.8.0", features = ["rt"], optional = true }
tracing = "0.1.26"
void = "1.0.2"

[dependencies.libp2p]
version = "0.40.0"
default-features = false
features = [
    "gossipsub",
    "identify",
    "kad",
    "mdns",
    "ping",
    #"relay",
    "mplex", "noise", "pnet", "yamux",
]

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
libipld = { version = "0.12.0", default-features = false, features = ["dag-cbor", "dag-pb", "derive"] }
libp2p-bitswap = { version = "0.19.0", default-features = false, features = ["compat"] }
multihash = { version = "0.14.0", default-features = false, features = ["blake3"] }
rand = "0.8.4"
tempdir = "0.3.7"
tracing-subscriber = "0.2.19"

[profile.release]
debug = true

[patch.crates-io]
libp2p = { git = "https://github.com/Actyx/rust-libp2p", branch = "sim-open" }
libp2p-bitswap = { git = "https://github.com/Actyx/libp2p-bitswap", branch = "sim-open" }
libp2p-broadcast = { git = "https://github.com/Actyx/libp2p-broadcast", branch = "sim-open-2" }
libp2p-quic = { git = "https://github.com/Actyx/libp2p-quic", branch = "sim-open-2" }
libp2p-blake-streams = { git = "https://github.com/Actyx/blake-streams", branch = "sim-open" }
