[workspace]
members = [".", "cli", "harness"]

[package]
name = "ipfs-embed"
version = "0.23.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "small embeddable ipfs implementation"
repository = "https://github.com/ipfs-rust/ipfs-embed"

[features]
default = ["async_global"]
async_global = ["async-global-executor", "libp2p/tcp-async-io", "libp2p/dns-async-std"]
tokio = ["tokio-crate", "libp2p/tcp-tokio", "libp2p/dns-tokio"]
telemetry = ["tide", "async_global"]

[dependencies]
anyhow = "1.0.52"
async-executor = "1.4.1"
async-global-executor = { version = "2.0.2", optional = true }
async-io = "1.6.0"
async-trait = "0.1.52"
chrono = "0.4.19"
fnv = "1.0.7"
futures = "0.3.19"
futures-timer = "3.0.2"
ipfs-sqlite-block-store = "0.11.0"
lazy_static = "1.4.0"
libipld = { version = "0.12.0", default-features = false }
libp2p-bitswap = "0.21.0"
libp2p-broadcast = "0.8.0"
names = "0.12.0"
parking_lot = "0.11.2"
pin-project = "1.0.10"
prometheus = "0.13.0"
rand = "0.8.4"
thiserror = "1.0.30"
tide = { version = "0.16.0", optional = true }
tokio-crate = { package = "tokio", version = "1.15.0", features = ["rt"], optional = true }
tracing = "0.1.29"
void = "1.0.2"

[dependencies.libp2p]
version = "0.42.1"
default-features = false
features = [
    "gossipsub",
    "identify",
    "kad",
    "mdns",
    "ping",
    #"relay",
    "mplex",
    "noise",
    "pnet",
    "yamux",
]

[dev-dependencies]
async-std = { version = "1.10.0", features = ["attributes"] }
libipld = { version = "0.12.0", default-features = false, features = ["dag-cbor", "dag-pb", "derive"] }
libp2p-bitswap = { version = "0.21.0", default-features = false, features = ["compat"] }
multihash = { version = "0.14.0", default-features = false, features = ["blake3"] }
rand = "0.8.4"
regex = "1.5.4"
tempdir = "0.3.7"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }

[profile.release]
debug = true
