[package]
name = "ipfs-embed-cli"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
async-std = { version = "1.9.0", features = ["attributes"] }
ipfs-embed = { path = ".." }
libipld = { version = "0.11.0", default-features = false, features = ["dag-cbor"] }
multihash = { version = "0.13.2", default-features = false, features = ["blake3"] }
structopt = "0.3.21"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
