[package]
name = "ipfs-embed-cli"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.41"
async-process = "1.1.0"
async-std = { version = "1.9.0", features = ["attributes"] }
chrono = "0.4.19"
ed25519-dalek = "1.0.1"
ipfs-embed = { path = ".." }
libipld = { version = "0.12.0", default-features = false, features = ["dag-cbor"] }
multihash = { version = "0.14.0", default-features = false, features = ["blake3"] }
parking_lot = "0.11.2"
serde = "1.0.132"
serde_json = "1.0.73"
structopt = "0.3.22"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
