[package]
name = "ipfs-embed-cli"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.56"
async-process = "1.3.0"
async-std = { version = "1.11.0", features = ["attributes"] }
chrono = "0.4.19"
ipfs-embed = { path = ".." }
libipld = { version = "0.12.0", default-features = false, features = ["dag-cbor"] }
multihash = { version = "0.14.0", default-features = false, features = ["blake3"] }
parking_lot = "0.11.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
structopt = "0.3.26"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
