[package]
name = "ipfs-embed-core"
version = "0.8.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "small embeddable ipfs implementation"
repository = "https://github.com/ipfs-rust/ipfs-embed"

[dependencies]
anyhow = "1.0.32"
async-trait = "0.1.41"
futures = "0.3.5"
libipld = { version = "0.7.1", default-features = false }
libp2p-core = "0.24.0"
libp2p-bitswap = "0.8.0"
log = "0.4.11"
