[package]
name = "ipfs-embed-core"
version = "0.9.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "small embeddable ipfs implementation"
repository = "https://github.com/ipfs-rust/ipfs-embed"

[dependencies]
anyhow = "1.0.36"
async-trait = "0.1.42"
fnv = "1.0.7"
futures = "0.3.8"
libipld = { version = "0.9.0", default-features = false }
libp2p = { version = "0.33.0", default-features = false }
libp2p-bitswap = "0.11.0"
log = "0.4.11"
