[package]
name = "ipfs-embed-db"
version = "0.8.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "small embeddable ipfs implementation"
repository = "https://github.com/ipfs-rust/ipfs-embed"

[dependencies]
anyhow = "1.0.32"
async-std = { version = "1.6.5", features = ["unstable"] }
cuckoofilter = "0.5.0"
fnv = "1.0.7"
futures = "0.3.5"
ipfs-embed-core = { version = "0.8.0", path = "../core" }
libipld = { version = "0.7.1", default-features = false }
log = "0.4.11"
sled = "0.34.4"
thiserror = "1.0.20"

[dev-dependencies]
async-std = { version = "1.6.5", features = ["attributes"] }
env_logger = "0.7.1"
libipld = { version = "0.7.1", features = ["dag-cbor"], default-features = false }
tempdir = "0.3.7"
