[package]
name = "ipfs-embed-db"
version = "0.10.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "small embeddable ipfs implementation"
repository = "https://github.com/ipfs-rust/ipfs-embed"

[dependencies]
anyhow = "1.0.35"
async-std = { version = "1.8.0", features = ["unstable"] }
fnv = "1.0.7"
futures = "0.3.8"
ipfs-embed-core = { version = "0.10.0", path = "../core" }
libipld = { version = "0.8.2", default-features = false }
sled = "0.34.6"
thiserror = "1.0.22"
tracing = "0.1.22"
tracing-futures = "0.2.4"

[dev-dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
criterion = "0.3.3"
inferno = "0.10.2"
libipld = { version = "0.8.2", features = ["dag-cbor", "derive"], default-features = false }
multihash = { version = "0.13.2", default-features = false, features = ["blake3"] }
tracing-flame = "0.1.0"
tracing-subscriber = { version = "0.2.15", features = ["chrono", "env-filter", "fmt"] }

[[bench]]
name = "alias"
harness = false
