[package]
name = "ipfs-embed-harness"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.41"
async-global-executor = "2.0.2"
async-process = "1.1.0"
escargot = "0.5.7"
futures = "0.3.15"
ipfs-embed-cli = { path = "../cli" }
libipld = { version = "0.12.0", default-features = false, features = ["dag-cbor", "dag-pb", "derive"] }
libp2p = { version = "0.40.0", default-features = false }
multihash = { version = "0.14.0", default-features = false, features = ["blake3"] }
netsim-embed = "0.5.0"
rand = "0.8.4"
structopt = "0.3.22"
tempdir = "0.3.7"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
