[package]
name = "ipfs-embed-net"
version = "0.11.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "small embeddable ipfs implementation"
repository = "https://github.com/ipfs-rust/ipfs-embed"

[dependencies]
anyhow = "1.0.38"
async-global-executor = "2.0.2"
fnv = "1.0.7"
futures = "0.3.12"
ip_network = "0.3.4"
libipld = { version = "0.10.0", default-features = false }
libp2p-bitswap = { git = "http://github.com/ipfs-rust/libp2p-bitswap", features = ["compat"] }
names = "0.11.0"
prometheus = "0.11.0"
thiserror = "1.0.23"
tracing = "0.1.23"
void = "1.0.2"

[dependencies.libp2p]
version = "0.34.0"
default-features = false
features = [
    # "deflate",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "mdns",
    "ping",
    "pnet",
    # "quic",
    "mplex", "noise", "tcp-async-io", "yamux",
]
