[package]
name = "ipfs-embed-net"
version = "0.11.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "small embeddable ipfs implementation"
repository = "https://github.com/ipfs-rust/ipfs-embed"

[dependencies]
anyhow = "1.0.38"
async-global-executor = "2.0.2"
fnv = "1.0.7"
futures = "0.3.13"
ip_network = "0.3.4"
libipld = { version = "0.11.0", default-features = false }
libp2p-bitswap = "0.13.0"
names = "0.11.0"
parking_lot = "0.11.1"
prometheus = "0.11.0"
thiserror = "1.0.24"
tracing = "0.1.25"
void = "1.0.2"

[dependencies.libp2p]
version = "0.35.1"
default-features = false
features = [
    # "deflate",
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "mdns",
    "ping",
    "pnet",
    # "quic",
    "mplex", "noise", "tcp-async-io", "yamux",
]
