[package]
name = "ipfs-embed-post"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
filecoin-proofs-api = "5.2.0"
libipld = { version = "0.7.1", default-features = false }
libp2p = { version = "0.28.1", default-features = false }
tempfile = "3.1.0"

[dev-dependencies]
env_logger = "0.7.1"
libipld = { version = "0.7.1", default-features = false, features = ["dag-cbor"] }
