[package]
name = "ipfs-embed-sqlite"
version = "0.9.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
async-global-executor = "2.0.1"
async-io = "1.3.1"
fnv = "1.0.7"
futures = { version = "0.3.8", default-features = false }
ipfs-sqlite-block-store = "0.1.6"
lazy_static = "1.4.0"
libipld = { version = "0.9.0", default-features = false }
prometheus = "0.11.0"

[dev-dependencies]
async-std = { version = "1.8.0", features = ["attributes"] }
libipld = { version = "0.9.0", default-features = false, features = ["dag-cbor"] }
multihash = { version = "0.13.2", default-features = false, features = ["blake3"] }
tracing-subscriber = "0.2.15"
