[package]
name = "ipfs-embed-substrate"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
futures = "0.3.5"
ipfs-embed-core = { path = "../core" }
libipld = { version = "0.5.1", default-features = false }
sc-network = "0.8.0-rc6"
sp-runtime = "2.0.0-rc6"
